[project]
name = "meta-census"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "lxml>=5.4.0",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
